--- a/尚硅谷SpringBoot教程/spring-boot-04-web-restfulcrud/src/main/resources/templates/emp/add.html
+++ b/尚硅谷SpringBoot教程/spring-boot-04-web-restfulcrud/src/main/resources/templates/emp/add.html
@@ -53,9 +53,10 @@
 				<div th:replace="commons/bar::#sidebar(activeUri='emps')"></div>
 
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+
 					<!--需要区分是员工修改还是添加；-->
 					<form th:action="@{/emp}" method="post">
-						<!--发送put请求修改员工数据-->
+						<!--发送put请求修改员工数据，form表单只支持get、post提交，HiddenHttpMethodFilter -->
 						<!--
 						1、SpringMVC中配置HiddenHttpMethodFilter;（SpringBoot自动配置好的）
 						2、页面创建一个post表单
