--- a/notes/SpringBoot/code/springboot-06-springsecurity/src/main/resources/templates/index.html
+++ b/notes/SpringBoot/code/springboot-06-springsecurity/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <title>首页</title>
     <!--semantic-ui-->
     <link href="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
-    <link th:href="@{/qinjiang/css/qinstyle.css}" rel="stylesheet">
+    <link th:href="@{/css/qinstyle.css}" rel="stylesheet">
 </head>
 <body>
 
@@ -103,8 +103,8 @@
 </div>
 
 
-<script th:src="@{/qinjiang/js/jquery-3.1.1.min.js}"></script>
-<script th:src="@{/qinjiang/js/semantic.min.js}"></script>
+<script th:src="@{/js/jquery-3.1.1.min.js}"></script>
+<script th:src="@{/js/semantic.min.js}"></script>
 
 </body>
 </html>
