--- a/notes/SpringBoot/code/springboot-06-springsecurity/src/main/resources/templates/views/login.html
+++ b/notes/SpringBoot/code/springboot-06-springsecurity/src/main/resources/templates/views/login.html
@@ -54,18 +54,18 @@
                 </i>注册
             </div>
             <br><br>
-            <small>blog.kuangstudy.com</small>
+            <small>andyron.com</small>
         </div>
         <div class="ui segment" style="text-align: center">
-            <h3>Spring Security Study by 秦疆</h3>
+            <h3>Spring Security Study by AndyRon</h3>
         </div>
     </div>
 
 
 </div>
 
-<script th:src="@{/qinjiang/js/jquery-3.1.1.min.js}"></script>
-<script th:src="@{/qinjiang/js/semantic.min.js}"></script>
+<script th:src="@{/js/jquery-3.1.1.min.js}"></script>
+<script th:src="@{/js/semantic.min.js}"></script>
 
 </body>
 </html>
